Thu Apr 23 20:53:06 MET DST 1998 hannes
  * removed END_GRAMMAR ("RETURN") from iparith.cc, grammar.y
Thu Apr 23 20:16:24 MET DST 1998 hannes
  * fixed bug in rKill of Q-rings (ring.cc, polys.cc)
Wed Apr 22 09:42:35 MET DST 1998 hannes
  * several changes concerning stdfac
    (kstdfac.cc, kutil.cc kutil.h)

Tue Apr 21 15:19:10 MET DST 1998 hannes/jens
  * gdc in Q(a) returns "not implemented" (clapsing.cc)

Tue Apr 21 12:30:44 1998  Jens Schmidt  <schmidt@mathematik.uni-kl.de>

	* clapsing.cc  (singclap_gcd): checks for `NULL' removed
	
	* clapsing.cc, extra.cc (FACTORY_GCD_TEST, FACTORY_GCD_STAT,
 	  FACTORY_GCD_DEBOUT, FACTORY_GCD_TIMING): new #defines for gcd
	  testing
	* clapsing.cc (singclap_divide_content, singclap_alglcm,
	  singclap_algdividecontent): code added for factory testing.
  	  Wrapped by #defines `FACTORY_GCD_TEST', `FACTORY_GCD_STAT',
 	  `FACTORY_GCD_DEBOUT', and `FACTORY_GCD_TIMING'.
	* extra.cc (jjSYSTEM): code added for factory testing.  Wrapped
	  by #defines `FACTORY_GCD_TEST' and `FACTORY_GCD_TIMING'.

Fri Apr 17 09:53:53 MET DST 1998 hannes
 * fixed a minor but very nasty bug: nlSetMap was resetting npPrimeM
    (longrat.cc)

1998-04-16  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* mpsr_PutPoly.cc: Took out normalization of rational numbers
	before they are put -- might have side effects

	* extra.cc: added system("--option") which returns value of
	option; in debug mode: system("OptionValues") lists all option
	values 
	
	* sing_mp.cc: use long option names for MP link options
	* MPtcp:launch: Uses find_exec as default application
	
	*  tesths.cc: New (handling of) command line options (long
	options, usage of getopt_long): Parse more than one argument
	script, etc ..
	*  added getopt.[c,h]for parsing of command lines
	
	* mod2.h.in, configure.in: Got rid off str* tests

1998-04-07  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* mpsr_Put.cc (mpsr_PutDump): dump does not dump LIB string any more
